2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs:
	* SoftEvaluationContext.cs: After an evaluation in the target,
	  the current frame may be invalidated, so it has to be
	  queried again.

	* SoftDebuggerAdaptor.cs: Misc value conversion fixes.

	* VariableValueReference.cs: Implement local variable
	  assignment.

2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Add missing call to base dispose.

	* RemoteSoftDebuggerSession.cs: Fix warning.

2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Avoid IDE crash when an exception is
	  thrown in the event handler.

2009-11-12  Geoff Norton  <gnorton@novell.com>

	* RemoteSoftDebuggerSession.cs: Not all Listen() events redirect
	the console as well.

2009-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: Catch exceptions when getting
	  process name. Works around Mono bug with symlinked runtimes.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: Fix bad state check.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerEngine.cs:
	* SoftDebuggerSession.cs:
	* Mono.Debugger.Soft.dll:
	* RemoteSoftDebuggerSession.cs: Use new async launch/listen
	  APIs. Add proper support for parallel runtimes.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fixed bad copy.

2009-11-10  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerEngine.cs: Don't try to parse version number.
	  Instead check for presence of Mono.Debugger.Soft.dll.

2009-11-10  Michael Hutchinson  <mhutchinson@novell.com>

	* RemoteSoftDebuggerSession.cs: Make GetListenMessage virtual
	  instead of abstract.

2009-11-09  Geoff Norton  <gnorton@novell.com>

	* SoftDebuggerSession.cs: Don't handle disconnects or 
	VMDeath, as we will (erroneously) try to resume a dead
	vm

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>
