@@ -1,3 +1,8 @@
+2009-11-13  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* SoftDebuggerSession.cs: Refactor to tidy up the main event
+	  handler.
+
 2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* SoftDebuggerSession.cs:
